seminars-and-events - search grey bar moved down a bit to prevent overlap with title icon.

--- a/sites/all/themes/brodies201612/scss/style.scss
+++ b/sites/all/themes/brodies201612/scss/style.scss
@@ -1870,6 +1870,12 @@ body{
         &:first-of-type{
             margin-top:30px;
         }
+
+        @media #{$normal}{
+            &#block-views-seminars-main-seminar-listing{
+                margin-top:40px;
+            }
+        }
     }
     .region-pre-content{
         .block-views{
